--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <title>KLH Tube</title>
+
     <meta name="description" content="Private peer-to-peer educational video platform for KLH University students and faculty" />
     <meta name="author" content="KLH University" />
 
-    <meta property="og:title" content="KLH Peer Learning Network" />
+    <!-- Open Graph (Preview when shared) -->
+    <meta property="og:title" content="KLH Tube" />
     <meta property="og:description" content="Campus-only educational video sharing platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Set your own preview image -->
+    <meta property="og:image" content="/logo.png" />
 
+    <!-- Twitter Card Preview -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@klh_university" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
